# security-mcp

./: .gitleaks.toml  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE-DEBT.md  REUSE.toml  deny.toml  trivy-secret.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  close-issues-on-main.yml  fleet-ci.yml  fleet-security.yml  release.yml  reopen-issues-closed-off-main.yml
docs/: ASSESSMENT.md  ECOSYSTEM_CONTEXT.md  FLEET_STANDARDS.md  LOCAL_CHECKS.md  ROADMAP.md  mcp.example.json
docs/bulletins/: security-mcp-wrap.md
docs/tero-index/: INDEX.md  MANIFEST.toml  index.json
scripts/: check.sh  close-linked-issues.sh
src/: audit.rs  detectors.rs  error.rs  lib.rs  main.rs  patterns.rs  pipeline.rs  protocol.rs  screeners.rs  server.rs  subprocess.rs  tools.rs  wrap.rs
tests/: proxy_integration.rs  smoke.rs
