[package]
name = "security-mcp"
version = "0.1.6-alpha"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
license = "MIT"
description = "MCP (Model Context Protocol) server providing security screening, injection detection, and threat analysis"
repository = "https://github.com/tzervas/security-mcp"
keywords = ["mcp", "security", "pii", "secrets", "injection"]
categories = ["development-tools", "security"]

[dependencies]
# MCP and async runtime
tokio = { version = "^1.0", features = ["full"] }
async-trait = "^0.1"
futures = "^0.3"

# Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# HTTP/WebSocket for MCP
axum = { version = "^0.8", features = ["ws"] }
tower = "^0.5"
tower-http = { version = "^0.6", features = ["cors", "trace"] }

# Pattern matching and regex
regex = "^1.10"
lazy_static = "^1.4"
aho-corasick = "^1.1"

# Entropy detection for secrets
base64 = "^0.22"

# Hashing for content signatures
sha2 = "^0.10"
blake3 = "^1.5"

# UUID
uuid = { version = "^1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "^0.4", features = ["serde"] }

# Logging and tracing
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "^2.0"
anyhow = "^1.0"

# CPU optimization for batch scanning
rayon = "^1.10"

# CLI
clap = { version = "^4.5", features = ["derive"] }

# Random for request IDs
rand = "^0.10"

[dev-dependencies]
tokio-test = "^0.4"
tempfile = "^3.0"
